# woolly

./: .coverage  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
examples/template/: example_template.md
tests/: __init__.py  conftest.py
tests/functional/: __init__.py  test_cli.py  test_optional_flag.py
tests/unit/: __init__.py  test_cache.py  test_debug.py  test_optional_dependencies.py  test_progress.py
tests/unit/test_commands/: test_check.py  test_other_commands.py
tests/unit/test_languages/: __init__.py  test_base.py  test_python.py  test_registry.py  test_rust.py
tests/unit/test_reporters/: __init__.py  test_base.py  test_json.py  test_markdown.py  test_registry.py  test_stdout.py  test_template.py
woolly/: __main__.py  cache.py  debug.py  http.py  progress.py
woolly/commands/: __init__.py  check.py  clear_cache.py  list_formats.py  list_languages.py
woolly/languages/: __init__.py  base.py  python.py  rust.py
woolly/reporters/: __init__.py  base.py  json.py  markdown.py  stdout.py  template.py
